--- a/website/apps/alibrary/templates/alibrary/playlist_edit.html
+++ b/website/apps/alibrary/templates/alibrary/playlist_edit.html
@@ -9,6 +9,30 @@
 {% addtoblock "js-post" %}<script type="text/javascript" src="{{ STATIC_URL }}ac_tagging/js/jquery.tag-it.js"></script>{% endaddtoblock %}
 {% addtoblock "js-post" %}{% dajaxice_js_import %}{% endaddtoblock %}
 {% addtoblock "js-post" %}<script type="text/javascript" src="{{ STATIC_URL }}dajax/jquery.dajax.core.js"></script>{% endaddtoblock %}
+
+
+{% addtoblock "js-post" %}
+<script>
+	$(function(){
+		
+		$('.target-duration input:checked').parent().addClass("selected");
+		$('.target-duration input').css('display', 'none');
+
+		$('.target-duration input').live('change', function(e){
+			$('.target-duration label').removeClass('selected');
+			$(this).parents('label').addClass('selected');
+		});
+		
+		$('.dayparts input:checked').parents('li').addClass("selected");
+		$('.dayparts input').css('display', 'none');
+
+		$('.dayparts input').live('click', function(e){
+			$(this).parents('li').toggleClass('selected');
+		});
+	});
+</script>
+{% endaddtoblock %}
+
 <div id="heading">
 	{% include "skeleton/heading.html" %}
 </div>
@@ -27,7 +51,7 @@
 
 	<section>
 		<div class="row iteminfo release">
-			{% include "alibrary/release/_detail_info.html" %}
+			{% include "alibrary/playlist/_detail_info.html" %}
 		</div>
 	</section>
 
@@ -39,16 +63,15 @@
 {% endblock %}
 
 {% block sidebar %}
-{% include "alibrary/release/sidebar/_edit.html" %}
+{# include "alibrary/release/sidebar/_edit.html" #}
 {% endblock %}
 
 {% block form %}
 <div class="item_inner">
 
-	<form class="form-horizontal form-compact form-release" method="post" id="" enctype="multipart/form-data">
+	<form class="form-horizontal form-compact form-playlist" method="post" id="" enctype="multipart/form-data">
 
 		{{ form.management_form }}
-		{{ relation_form.management_form }}
 		{{ releasemedia_form.management_form }}
 
 		{% crispy action_form %}
@@ -56,30 +79,29 @@
 		{% crispy form %}
 		
 		
-
-		<fieldset>
-			<legend>
-				Relations<span class="pull-right">Help</span>
-			</legend>
+		
+		{# crispy action_form #}
+		
+		
 		
 
-		{% crispy relation_form %}
 		
-		</fieldset>
-		
-		{% crispy action_form %}
 		
 
+		<!--
 		<fieldset>
 			<legend>
 				Tracklist
 			</legend>
 		</fieldset>
+		-->
+		
+		{# crispy releasemedia_form #}
 		
 		
-		{% crispy release_bulkedit_form %}
 		
-		{% crispy releasemedia_form %}
+		
+		
 
 		
 		
