--- a/website/site-static/css/aplayer.css
+++ b/website/site-static/css/aplayer.css
@@ -8471,6 +8471,64 @@ form.form-playlist div.dayparts div.controls ul li.title {
   text-align: center;
 }
 
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ohrstrom\/Documents\/Code\/openbroadcast\.ch\/website\/site-static\/sass\/asite\/_forms_extra\.sass}line{font-family:\00003448}}
+.listview.editable.media {
+  margin: 20px 0;
+}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ohrstrom\/Documents\/Code\/openbroadcast\.ch\/website\/site-static\/sass\/asite\/_forms_extra\.sass}line{font-family:\00003455}}
+.listview.editable.media .list_header .row-fluid {
+  background-color: white;
+  border-bottom: 1px solid #efefef !important;
+}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ohrstrom\/Documents\/Code\/openbroadcast\.ch\/website\/site-static\/sass\/asite\/_forms_extra\.sass}line{font-family:\00003458}}
+.listview.editable.media .list_header .row-fluid > div {
+  padding: 5px;
+  margin: 1px 0;
+}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ohrstrom\/Documents\/Code\/openbroadcast\.ch\/website\/site-static\/sass\/asite\/_forms_extra\.sass}line{font-family:\00003463}}
+.listview.editable.media .item {
+  border-bottom: 1px solid #efefef !important;
+}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ohrstrom\/Documents\/Code\/openbroadcast\.ch\/website\/site-static\/sass\/asite\/_forms_extra\.sass}line{font-family:\00003468}}
+.listview.editable.media .item.drop-placeholder {
+  height: 60px;
+  width: 100%;
+  background-color: green !important;
+}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ohrstrom\/Documents\/Code\/openbroadcast\.ch\/website\/site-static\/sass\/asite\/_forms_extra\.sass}line{font-family:\00003473}}
+.listview.editable.media .item.ui-sortable-helper {
+  opacity: 0.9;
+}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ohrstrom\/Documents\/Code\/openbroadcast\.ch\/website\/site-static\/sass\/asite\/_forms_extra\.sass}line{font-family:\00003475}}
+.listview.editable.media .item.ui-sortable-helper > div {
+  background: yellow !important;
+}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ohrstrom\/Documents\/Code\/openbroadcast\.ch\/website\/site-static\/sass\/asite\/_forms_extra\.sass}line{font-family:\00003478}}
+.listview.editable.media .item .row-fluid {
+  background-color: white;
+}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ohrstrom\/Documents\/Code\/openbroadcast\.ch\/website\/site-static\/sass\/asite\/_forms_extra\.sass}line{font-family:\00003480}}
+.listview.editable.media .item .row-fluid > div {
+  padding: 5px;
+  margin: 1px 0;
+}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ohrstrom\/Documents\/Code\/openbroadcast\.ch\/website\/site-static\/sass\/asite\/_forms_extra\.sass}line{font-family:\00003484}}
+.listview.editable.media .item .waveform {
+  width: 100%;
+  height: 40px;
+}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ohrstrom\/Documents\/Code\/openbroadcast\.ch\/website\/site-static\/sass\/asite\/_forms_extra\.sass}line{font-family:\00003489}}
+.listview.editable.media .item .fade-cue input {
+  font-size: 12px;
+  max-width: 50px;
+  height: 16px;
+  margin-right: 4px;
+  background-color: transparent;
+  border: 1px dotted #bbbbbb;
+  text-align: right;
+  padding: 1px 2px;
+}
+
 @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ohrstrom\/Documents\/Code\/openbroadcast\.ch\/website\/site-static\/sass\/bootstrap\/_tables\.sass}line{font-family:\000039}}
 table {
   max-width: 100%;
