--- a/website/apps/alibrary/templates/alibrary/release/sidebar/_list.html
+++ b/website/apps/alibrary/templates/alibrary/release/sidebar/_list.html
@@ -6,5 +6,7 @@
 
 {% include "alibrary/release/sidebar/_filter.html" %}
 
-{% include "alibrary/sidebar/_playlist.html" %}
 
+{% if user.is_authenticated %}
+{% include "alibrary/sidebar/_playlist.html" %}
+{% endif %}
