--- a/website/apps/alibrary/templates/alibrary/playlist_detail.html
+++ b/website/apps/alibrary/templates/alibrary/playlist_detail.html
@@ -52,8 +52,21 @@
 					<div class="list_header"></div>
 
 					<div class="list_body">
-						{% for item in object.media.all %}
-						{% include "alibrary/media/_list_item_xs.html" %}
+						{% for item in object.items.all %}
+
+						{% if item.content_type.model == "media" %}
+							{% with item=item.content_object %}
+							{% include "alibrary/media/_list_item_xs.html" %}
+							{% endwith %}
+						{% endif %}
+
+						{% if item.content_type.model == "release" %}
+							{% with item=item.content_object %}
+							<h1>{{ item.name }}</h1>
+							{% endwith %}
+						{% endif %}
+						
+						
 						{% endfor %}
 					</div>
 				</div>
