--- a/website/apps/alibrary/templates/alibrary/templatetags/playlists_inline.html
+++ b/website/apps/alibrary/templates/alibrary/templatetags/playlists_inline.html
@@ -61,8 +61,25 @@
 
 		<div class="list">
 			
-			{{#object.media}}
+			{{#object.items}}
 			
+			<div class="list_item">
+				<div class="right">
+					<a href="#393:3884" title="Remove" class="action delete"><img src="http://openbroadcast.ch//media/img/base/spacer.png" width="16" height="16" alt="Remove"></a>
+				</div>
+				<div class="left">
+					<a href="http://openbroadcast.ch/en/content/library/playlists/393-session/play.json#0#replace" title="Play" class="action play playable popup"><img src="http://openbroadcast.ch//media/img/base/spacer.png" width="16" height="16" alt="Play"></a>
+				</div>
+				<div class="left title">
+					<a href="{{ item.content_object.absolute_url }}" title="Mobilize">{{ item.content_object.name }}</a>
+				</div>
+				<div class="clear"></div>
+			</div>
+			
+			{{/object.items}}
+			
+			{{#object.media}}
+			<!--
 			<div class="list_item">
 				<div class="right">
 					<a href="#393:3884" title="Remove" class="action delete"><img src="http://openbroadcast.ch//media/img/base/spacer.png" width="16" height="16" alt="Remove"></a>
@@ -75,7 +92,7 @@
 				</div>
 				<div class="clear"></div>
 			</div>
-			
+			-->
 			{{/object.media}}
 			
 		</div>
