--- a/website/site-static/css/screen.css
+++ b/website/site-static/css/screen.css
@@ -8489,47 +8489,63 @@ form.form-playlist div.dayparts div.controls ul li.title {
   margin: 1px 0;
 }
 @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ohrstrom\/Documents\/Code\/openbroadcast\.ch\/website\/site-static\/sass\/asite\/_forms_extra\.sass}line{font-family:\00003463}}
-.listview.editable.media .item {
+.listview.editable.media .item, .listview.editable.media .summary {
   border-bottom: 1px solid #efefef !important;
 }
 @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ohrstrom\/Documents\/Code\/openbroadcast\.ch\/website\/site-static\/sass\/asite\/_forms_extra\.sass}line{font-family:\00003468}}
-.listview.editable.media .item.drop-placeholder {
-  height: 60px;
+.listview.editable.media .item.drop-placeholder, .listview.editable.media .summary.drop-placeholder {
+  height: 80px;
   width: 100%;
-  background-color: green !important;
+  background-color: #ddffd9 !important;
 }
 @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ohrstrom\/Documents\/Code\/openbroadcast\.ch\/website\/site-static\/sass\/asite\/_forms_extra\.sass}line{font-family:\00003473}}
-.listview.editable.media .item.ui-sortable-helper {
-  opacity: 0.9;
+.listview.editable.media .item.ui-sortable-helper, .listview.editable.media .summary.ui-sortable-helper {
+  opacity: 0.8;
 }
 @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ohrstrom\/Documents\/Code\/openbroadcast\.ch\/website\/site-static\/sass\/asite\/_forms_extra\.sass}line{font-family:\00003475}}
-.listview.editable.media .item.ui-sortable-helper > div {
-  background: yellow !important;
+.listview.editable.media .item.ui-sortable-helper > div, .listview.editable.media .summary.ui-sortable-helper > div {
+  background: #f3f0fb !important;
 }
 @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ohrstrom\/Documents\/Code\/openbroadcast\.ch\/website\/site-static\/sass\/asite\/_forms_extra\.sass}line{font-family:\00003478}}
-.listview.editable.media .item .row-fluid {
+.listview.editable.media .item .row-fluid, .listview.editable.media .summary .row-fluid {
   background-color: white;
 }
 @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ohrstrom\/Documents\/Code\/openbroadcast\.ch\/website\/site-static\/sass\/asite\/_forms_extra\.sass}line{font-family:\00003480}}
-.listview.editable.media .item .row-fluid > div {
+.listview.editable.media .item .row-fluid > div, .listview.editable.media .summary .row-fluid > div {
   padding: 5px;
   margin: 1px 0;
 }
 @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ohrstrom\/Documents\/Code\/openbroadcast\.ch\/website\/site-static\/sass\/asite\/_forms_extra\.sass}line{font-family:\00003484}}
-.listview.editable.media .item .waveform {
+.listview.editable.media .item .waveform, .listview.editable.media .summary .waveform {
   width: 100%;
   height: 40px;
 }
 @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ohrstrom\/Documents\/Code\/openbroadcast\.ch\/website\/site-static\/sass\/asite\/_forms_extra\.sass}line{font-family:\00003489}}
-.listview.editable.media .item .fade-cue input {
-  font-size: 12px;
-  max-width: 50px;
-  height: 16px;
+.listview.editable.media .item .fade-cue .row-fluid > div, .listview.editable.media .summary .fade-cue .row-fluid > div {
+  text-align: right;
+  padding: 0 0 0 0;
+  margin-left: 4px;
+}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ohrstrom\/Documents\/Code\/openbroadcast\.ch\/website\/site-static\/sass\/asite\/_forms_extra\.sass}line{font-family:\00003493}}
+.listview.editable.media .item .fade-cue .row-fluid > div input, .listview.editable.media .summary .fade-cue .row-fluid > div input {
+  margin: 0;
+}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ohrstrom\/Documents\/Code\/openbroadcast\.ch\/website\/site-static\/sass\/asite\/_forms_extra\.sass}line{font-family:\00003496}}
+.listview.editable.media .item .fade-cue .row-fluid > div span, .listview.editable.media .summary .fade-cue .row-fluid > div span {
+  text-align: right;
+  color: #5a5a5a;
+  padding-right: 2px;
+}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ohrstrom\/Documents\/Code\/openbroadcast\.ch\/website\/site-static\/sass\/asite\/_forms_extra\.sass}line{font-family:\00003500}}
+.listview.editable.media .item .fade-cue input, .listview.editable.media .summary .fade-cue input {
+  font-size: 11px;
+  width: 60px;
+  height: 14px;
   margin-right: 4px;
   background-color: transparent;
   border: 1px dotted #bbbbbb;
   text-align: right;
-  padding: 1px 2px;
+  padding: 1px 2px 1px 0;
 }
 
 @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ohrstrom\/Documents\/Code\/openbroadcast\.ch\/website\/site-static\/sass\/bootstrap\/_tables\.sass}line{font-family:\000039}}
